--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -21,6 +21,13 @@
     &-description
         font-size: 12px
         line-height: 15px
+    &-grid
+        display: flex
+        justify-content: space-between
+    &-right
+        display: flex
+        flex-direction: column
+        justify-content: space-between
 
 .stars
     flex-basis: 100%
@@ -49,13 +56,13 @@
 
 .swiper
     width: 100%
-    height: 450px
+    height: 100%
     position: relative
     border-radius: 8px
     &:after
         content: " "
         position: absolute
-        width: 728px
+        width: 100%
         height: 100%
         top: 0
         left: 0
@@ -64,6 +71,7 @@
 
 .slider
     width: 728px
+    height: 450px
     &-button
         position: absolute
         top: 50%
@@ -83,3 +91,76 @@
         &--prev
             left: 18px
             background-image: url(../img/arrow-prev.svg)
+
+.booking
+    background-color: $dark
+    color: $light
+    border-radius: 8px
+    width: 350px
+    min-height: 210px
+    padding: 28px
+    &__info
+        display: flex
+        justify-content: space-between
+        margin-bottom: 9px
+    &__price
+        display: flex
+        flex-direction: column
+    &__start
+        font-size: 10px
+        line-height: 14px
+    &__pricetag
+        font-weight: 800
+        font-size: 24px
+        line-height: 33px
+    &__per-room
+        font-size: 12px
+        line-height: 16px
+    &__room
+        margin-top: 4px
+    &__text
+        display: flex
+        align-items: center
+        justify-content: space-between
+        margin-bottom: 8px
+        font-size: 12px
+        line-height: 16px
+    &__description
+        margin-left: 9px
+    &__call-center
+        display: flex
+        align-items: center
+        justify-content: space-between
+        margin-bottom: 17px
+    &__heading
+        font-size: 18px
+        font-weight: 600
+        line-height: 25px
+    &__number
+        display: flex
+        align-items: center
+        justify-content: space-between
+        color: inherit
+        text-decoration: none
+        font-weight: 600
+        font-size: 18px
+        line-height: 25px
+    &__num
+        margin-left: 8px
+    &__button
+        width: 100%
+        min-height: 45px
+        font-size: 14px
+        font-weight: 600
+        line-height: 19px
+        border-radius: 4px
+        background-color: $primary
+        border: none
+        color: $light
+        cursor: pointer
+
+.map
+    width: 347px
+    height: 213px
+    border-radius: 10px
+    overflow: hidden
