--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -14,7 +14,8 @@
 
 
 @media (max-width: 992px)
-    .container
+    .container,
+    .newsletter-wrapper
         max-width: 760px
 
     .logo
@@ -114,6 +115,13 @@
     .map
         width: 100%
 
+    .newsletter
+        &-wrapper
+            max-width: 576px
+            width: 92%
+            flex-direction: column
+            align-items: flex-start
+
 @media (max-width: 576px)
     .logo
         width: 99px
@@ -124,3 +132,17 @@
     .hotel
         &__slider
             margin-bottom: 20px
+
+    .newsletter
+        padding: 76px 0 83px
+        &__title
+            margin-bottom: 37px
+        &-title
+            font-size: 20px
+            line-height: 25px
+            &__strong
+                font-size: 30px
+                line-height: 38px
+
+    .subscribe
+        width: 100%
