--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -14,6 +14,9 @@
                 height: 100%
                 object-fit: cover
 
+    .card
+        width: 230px
+        height: 230px
 
 @media (max-width: 992px)
     .container,
@@ -58,6 +61,16 @@
         &-slider
             &__item
                 max-width: 580px
+
+    .activities
+        &-wrapper
+            flex-wrap: wrap
+        &__card
+            margin-bottom: 20px
+
+    .card
+        width: 340px
+        height: 250px
 
 @media (max-width: 768px)
     .container
@@ -143,6 +156,13 @@
                     transform: translate(50%, 0)
                     margin-right: -65px
 
+    .activities
+        padding: 40px 0 60px
+
+    .card
+        width: 49%
+        height: 255px
+
 @media (max-width: 576px)
     .logo
         width: 99px
@@ -165,4 +185,7 @@
                 line-height: 38px
 
     .subscribe
+        width: 100%
+
+    .card
         width: 100%
