--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -110,11 +110,43 @@
         max-width: 576px
         width: 92%
 
+    body
+        padding-top: 78px
+
     .navbar
-        &__search,
-        &-menu,
+        &__mobile
+            &--fixed
+                width: 100%
+                position: fixed
+                top: 0
+                left: 0
+                z-index: 99
+        &__user, &__search
+            &--mobile
+                &--hidden
+                    display: none
+                &--visible
+                    display: flex
         &__user
+            flex-direction: column
+            justify-content: center
+        &-bottom
             display: none
+            position: fixed
+            left: 0
+            bottom: 0
+            right: 0
+            top: 78px
+            padding-top: 30px
+            &--visible
+                display: block
+        &-menu
+            flex-direction: column
+            &__item
+                margin-bottom: 20px
+                &--mobile
+                    &--visible
+                        display: block
 
     .menu
         &-button
@@ -132,6 +164,12 @@
                 width: 16px
                 height: 1px
                 background-color: $text-color
+
+    .user
+        &__name
+            &--light
+                color: $light
+                margin: 10px 0 0
 
     .stars
         flex-basis: auto
