--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,3 +12,29 @@ body
 
 img
     max-width: 100%
+
+.input
+    background-color: #fff
+    border-radius: 4px
+    border: none
+    padding: 0 23px
+    height: 50px
+
+.message
+    background-color: #fff
+    border-radius: 4px
+    border: none
+    padding: 18px 23px
+    resize: none
+
+.button
+    min-width: 160px
+    min-height: 50px
+    padding: 18px
+    font-size: 12px
+    font-weight: 700
+    line-height: 15px
+    color: $light
+    background-color: $primary
+    border: none
+    border-radius: 4px
