--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -291,3 +291,8 @@
             &-form
                 grid-row: 7
                 grid-column: 1
+        &-bottom
+            flex-direction: column
+            align-items: center
+            &__list
+                margin-bottom: 20px
