--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -8,6 +8,7 @@
         grid-gap: 20px
         grid-auto-rows: minmax(40px, min-content)
         align-items: start
+        margin-bottom: 94px
     &__logo
         width: 166px
         grid-row: 1 / 3
@@ -77,3 +78,20 @@
         font-weight: 700
         line-height: 15px
         color: $footer-text-color
+    &-bottom
+        display: flex
+        justify-content: space-between
+        align-items: center
+        &__list
+            display: flex
+            margin: 0
+            padding: 0
+            list-style: none
+            font-size: 12px
+            line-height: 15px
+        &__item
+            &:not(:last-child)
+                margin-right: 10px
+        &__link
+            color: $light
+            text-decoration: none
